few more changes

--- a/about.html
+++ b/about.html
@@ -4,5 +4,9 @@ permalink: /about/
 slug_name: about
 ---
 <section>
-  I'm going to write something about me... but maybe later.
+  <article>
+    <p>
+      I'm going to write something about me... but maybe later.
+    </p>
+  </article>
 </section>
